--- a/themes/Drupal_Angular/Drupal_Angular.libraries.yml
+++ b/themes/Drupal_Angular/Drupal_Angular.libraries.yml
@@ -11,8 +11,8 @@ base:
       # separate print stylesheets is bad for front-end performance.
       components/asset-builds/css/base.css: {}
   # If this library had JavaScript you could specify it like this:
-  # js:
-  #   js/script.js: {}
+  js:
+    js/script.js: {}
   dependencies:
     - Drupal_Angular/clearfix
     - Drupal_Angular/visually-hidden
