adding JQuery, and js custom library

--- a/themes/Drupal_Angular/Drupal_Angular.info.yml
+++ b/themes/Drupal_Angular/Drupal_Angular.info.yml
@@ -60,6 +60,7 @@ libraries:
   - Drupal_Angular/base
   # @TODO Remove these libraries and use attach_library() for all component styles.
   - Drupal_Angular/scripts
+  - Drupal_Angular/global-scripts
   - Drupal_Angular/box
   - Drupal_Angular/comment
   - Drupal_Angular/header
