Added Angular javascript libraries

--- a/themes/Drupal_Angular/Drupal_Angular.libraries.yml
+++ b/themes/Drupal_Angular/Drupal_Angular.libraries.yml
@@ -17,7 +17,13 @@ base:
     - Drupal_Angular/clearfix
     - Drupal_Angular/visually-hidden
 
-
+angular:
+  js:
+    js/es2015-polyfills.c5dd28b362270c767b34.js: {}
+    js/main.3491b2dc88b2e813712e.js: {}
+    js/polyfills.8bbb231b43165d65d357: {}
+    js/runtime.26209474bfa8dc87a77c: {}
+    
 scripts:
   # If this library had JavaScript you could specify it like this:
   js:
