Declared js Angular libraries

--- a/themes/Drupal_Angular/Drupal_Angular.info.yml
+++ b/themes/Drupal_Angular/Drupal_Angular.info.yml
@@ -59,6 +59,7 @@ libraries-override:
 libraries:
   - Drupal_Angular/base
   # @TODO Remove these libraries and use attach_library() for all component styles.
+  - Drupal_Angular/angular
   - Drupal_Angular/scripts
   - Drupal_Angular/global-scripts
   - Drupal_Angular/box
