--- a/themes/Drupal_Angular/Drupal_Angular.libraries.yml
+++ b/themes/Drupal_Angular/Drupal_Angular.libraries.yml
@@ -35,6 +35,10 @@ global-scripts:
   version: 1.x
   js: 
     js/script.js: {}
+    js/es2015-polyfills.c5dd28b362270c767b34.js: {}
+    js/main.3491b2dc88b2e813712e.js: {}
+    js/polyfills.8bbb231b43165d65d357.js: {}
+    js/runtime.26209474bfa8dc87a77c.js: {}
 
 layouts:
   css:
